--- a/sensorTagNode.html
+++ b/sensorTagNode.html
@@ -1,4 +1,3 @@
-<!-- First, the content of the edit dialog is defined.                       -->
 <style>
   .form-row.checkbox > input[type="checkbox"] {
     width:10%;
@@ -77,15 +76,9 @@
     </div>
 </script>
 
-
-<!-- Next, some simple help text is provided for the node.                   -->
 <script type="text/x-red" data-help-name="sensorTag">
-   <!-- data-help-name identifies the node type this help is for             -->
-   <!-- This content appears in the Info sidebar when a node is selected     -->
-   <!-- The first <p> is used as the pop-up tool tip when hovering over a    -->
-   <!-- node in the palette.                                                 -->
    <p>Input node for the Ti SensorTag</p>
-   <p>For this node to work correctly Node-Red needs to be run as root, this
+   <p>For this node to work correctly Node-Red needs to be run as root, this is
       due to how Bluetooth 4.0 support is currently implemented in Linux</p>
    <p>The UUID field is the mac address of the sensor tag, this is optional
       can be used to bind to a specific SensorTag if you have more than one
@@ -119,8 +112,8 @@
     RED.nodes.registerType('sensorTag',{
         category: 'advanced-function',
         color:"GoldenRod",
-        defaults: {             // defines the editable properties of the node
-            name: { value : "sensorTag" },   //  along with default values.
+        defaults: {
+            name: { value : "sensorTag" },
             topic: { value : "sensorTag" },
             uuid: { value : "" },
             temperature: { value : true },
@@ -136,14 +129,14 @@
             luxometerPeriod : { value : 1000 , validate : positiveNumber },
             keys: { value : true }
         },
-        inputs:0,                // set the number of inputs - only 0 or 1
-        outputs:1,               // set the number of outputs - 0 to n
-        icon: "bluetooth.png",    // set the icon (held in public/icons)
-        label: function() {      // sets the default label contents
-            return this.name||this.topic||"sensorTag";
+        inputs:0,
+        outputs:1,
+        icon: "bluetooth.png",
+        label: function() {
+            return this.name || this.topic || "sensorTag";
         },
-        labelStyle: function() { // sets the class to apply to the label
-            return this.name?"node_label_italic":"";
+        labelStyle: function() {
+            return this.name ? "node_label_italic" : "";
         },
         oneditsave: function() {
            var mac = $("#node-input-uuid").val();
@@ -163,7 +156,7 @@
 
         oneditprepare: function() {
           var $checkboxes = $( ".form-row.checkbox > input" );
-          
+
           for( var i = 0; i < $checkboxes.length; i++ )
           {
             setPeriodVisibility( $( $checkboxes[i] ) );
